Fix navigation overflow

--- a/client/src/app/components/navigation/navigation.component.scss
+++ b/client/src/app/components/navigation/navigation.component.scss
@@ -16,7 +16,7 @@
 	width: 0;
 	max-width: 400px;
 	min-width: 0;
-	font-size: 1.6rem;
+	font-size: 1.4rem;
 	padding: 0;
 	margin-top: 10vh;
 	z-index: 3;
@@ -108,6 +108,12 @@
 			visibility: visible;
 			opacity: 1;
 		}
+	}
+}
+
+@media (max-width: 1400px) {
+	.navigation-sidepanel {
+		font-size: 1.3rem;
 	}
 }
 
